--- a/index.html
+++ b/index.html
@@ -5,6 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ابن البصرة | طلاب العراق | السادس الإعدادي</title>
     <style>
+
+content="width=device-width, initial-scale=1.0">
+    <title>القائمة المتحركة</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            direction: rtl;
+            background-color: #f4f4f9;
+            margin: 0;
+            padding: 0;
+        }
+        .menu-button {
+            background-color: #007bff;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            font-size: 18px;
+            cursor: pointer;
+            border-radius: 5px;
+            margin: 20px;
+        }
+        .menu-button:hover {
+            background-color: #0056b3;
+        }
+        .submenu {
+            display: none;
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+        .submenu li {
+            margin: 10px 0;
+        }
+        .submenu a {
+            text-decoration: none;
+            color: #333;
+            font-size: 16px;
+            padding: 10px;
+            display: block;
+            background-color: #e7e7e7;
+            border-radius: 5px;
+        }
+        .submenu a:hover {
+            background-color: #ccc;
+        }
         /* إعدادات الخطوط والألوان */
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -267,7 +312,7 @@
             </ul>
             <div class="search-container">
                 <input type="text" class="search-input" placeholder="ابحث هنا...">
-                <button class="search-button">بحث</button>
+                <button class="https://www.coca.com/search?q=">بحث</button>
             </div>
         </div>
     </body>
