--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ content="width=device-width, initial-scale=1.0">
 <body>
     <body>
             <div class="search-container">
-                <h1>ابن البصرة | طلاب العراق </h1>
+                <h1>ابن البصرة | طلاب العراق  للبحث  في Google   </h1>
                 <form action="https://www.google.com/search" method="get" target="_blank">
                     <input type="text" name="q" class="search-input" placeholder="ابحث هنا..." required>
                     <button type="submit" class="search-button">بحث</button>
@@ -296,7 +296,7 @@ content="width=device-width, initial-scale=1.0">
 
     <!-- العنوان الرئيسي وقسم الصور -->
     <div class="section" id="d1">
-        <h1>ابن البصرة | طلاب العراق</h1>
+     
         <p>كل ما يحتاجه الطالب من ملازم، توجيهات، ونصائح دراسية</p>
         <div>
             <a href="https://t.me/d_tt3" target="_blank">
