--- a/index.html
+++ b/index.html
@@ -58,7 +58,28 @@ content="width=device-width, initial-scale=1.0">
             padding: 0;
             text-align: center;
         }
+        <style>
+    /* تنسيق الزر */
+    .btn {
+      display: block;
+      width: 100%;  /* عرض الزر على كامل الصفحة */
+      padding: 15px;
+      font-size: 18px;
+      color: white;
+      background-color: #4CAF50; /* اللون الأخضر */
+      border: none;
+      border-radius: 8px; /* حواف دائرية */
+      text-align: center;
+      text-decoration: none; /* إزالة التسطير */
+      box-sizing: border-box;
+      transition: background-color 0.3s, transform 0.3s;
+    }
 
+    /* التأثير عند المرور على الزر */
+    .btn:hover {
+      background-color: #45a049; /* تغيير اللون عند المرور */
+      transform: scale(1.05); /* تكبير الزر قليلاً */
+    }
         /* تنسيق الزر الرئيسي للبحث بالذكاء الاصطناعي */
         .ai-search-container {
             position: fixed;
@@ -361,8 +382,12 @@ content="width=device-width, initial-scale=1.0">
 </div>
    
 </div>
+<div> <br>  
 
-
+ <!-- الرابط مع الزر -->
+ <a href="https://t.me/d_tt123bot" class="btn"> المزيد من الملازم 2025</a>
+ 
+</div></br>
 
     <!-- القائمة الرئيسية -->
     <ul>
