--- a/index.html
+++ b/index.html
@@ -386,9 +386,15 @@ content="width=device-width, initial-scale=1.0">
 
  <!-- الرابط مع الزر -->
  <a href="https://t.me/d_tt123bot" class="btn"> المزيد من الملازم 2025</a>
- 
-</div></br>
 
+</div></br>
+<div> <br>  
+    <br>
+<!-- زر البحث الثابت -->
+<a href="https://t.me/d_tt123bot?start=search" class="search-button" target="_blank">البحث داخل البوت</a>
+</div></br>
+</br>
+<body>
     <!-- القائمة الرئيسية -->
     <ul>
     <li><a href="#d1">الرئيسية</a></li>
