--- a/index.html
+++ b/index.html
@@ -385,15 +385,10 @@ content="width=device-width, initial-scale=1.0">
 <div> <br>  
 
  <!-- الرابط مع الزر -->
- <a href="https://t.me/d_tt123bot" class="btn"> المزيد من الملازم 2025</a>
-
-</div></br>
-<div> <br>  
-    <br>
+ <a href="https://t.me/d_tt123bot" class="custom-button" target="_blank">     المزيد من الملازم 2025 </a>
 <!-- زر البحث الثابت -->
-<a href="https://t.me/d_tt123bot?start=search" class="search-button" target="_blank">البحث داخل البوت</a>
+<a href="https://t.me/d_tt123bot?start=search" class="custom-button" target="_blank">    البحث داخل البوت</a>
 </div></br>
-</br>
 <body>
     <!-- القائمة الرئيسية -->
     <ul>
