--- a/index.html
+++ b/index.html
@@ -393,9 +393,8 @@ content="width=device-width, initial-scale=1.0">
     <!-- القائمة الرئيسية -->
     <ul>
     <li><a href="#d1">الرئيسية</a></li>
-    <li><a href="https://t.me/d_tt123bot?start=625d6e65e3e8c61c285421641ece03c0">البحث في البوت</a></li>
+    <li><a href="https://t.me/d_tt101"> كروب جامعيون العراق </a></li>
     <li><a href="https://t.me/d_tt111">كروب طلاب السادس الإعدادي</a></li>
-    <li><a href="https://t.me/hasan99bot?start=5f00115e5b9ff7df9be670619bfada5b">شلون تجيب 100</a></li>
     </ul>
 </body>
 </html>
