--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@ content="width=device-width, initial-scale=1.0">
     <h1>  </h1>
     <!-- زر الرئيسي السادس الاعدادي -->
     <div class="menu-container">
-        <a href="https://t.me/d_tt3" class="custom-button" target="_blank">السادس الإعدادي</a>
+        <a href="" class="custom-button" target="_blank">السادس الإعدادي</a>
         <div class="dropdown-content">
             <a href="https://t.me/d_tt02">ملازم ومرشحات</a>
             <a href="https://t.me/Hsu58bot">اعتراضات السادس الإعدادي</a>
