--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ content="width=device-width, initial-scale=1.0">
 
         /* تنسيق العناوين */
         h1 {
-            font-size: 1em; 
+            font-size: 2em; 
             color: #42464d;
             margin: 10px 0;
         }
@@ -414,7 +414,18 @@ content="width=device-width, initial-scale=1.0">
 </head>
     <div class="section" id="d1">
         <h1>ابن البصرة | طلاب العراق        </h1>
-        <p>كل ما يحتاجه الطالب من ملازم، توجيهات، ونصائح دراسية</p>
+        <p> مرحباً بكم  
+            وجهتكم الأولى للنجاح  نسعى لتقديم محتوى تعليمي شامل ومفيد يساعدك على التفوق في دراستك وتطوير مهاراتك
+             ماذا نقدم؟
+
+            • ملخصات و شروحات واضحة وسهلة للمناهج.
+            • اختبارات تجريبية لتحسين مستواك.
+            • نصائح دراسية تساعدك على تنظيم وقتك.
+            • أحدث  وأفضل المصادر للطلاب.
+            <br></br> 
+            انضم إلينا الآن وتفوّق في دراستك!
+            
+           </p>
         <div>
             <a href="https://t.me/d_tt3" target="_blank">
                 <img src="img/1.jpg" alt="ابن البصرة | طلاب العراق">
@@ -427,9 +438,10 @@ content="width=device-width, initial-scale=1.0">
             </a>
            
         </div>
+        <br></br> 
         <div class="menu-container">
             <a href="https://t.me/d_tt111" class="custom-button" target="_blank">كروب طلاب سادس  الإعدادي</a>
-        </div>
+        </div><br></br> 
         <!-- الأزرار الإضافية -->
         <a href="https://t.me/d_tt123bot?start=4e9a1ee436415e035dda990a0b039963" class="custom-button" target="_blank">ملازم اللغة العربية السادس إعدادي 2025</a>
         <a href="https://t.me/d_tt123bot?start=eed6022419bf38db21fc4cc4ffe6cba2" class="custom-button" target="_blank">ملازم الإسلامية السادس إعدادي 2025</a>
