--- a/index.html
+++ b/index.html
@@ -418,12 +418,12 @@ content="width=device-width, initial-scale=1.0">
             وجهتكم الأولى للنجاح  نسعى لتقديم محتوى تعليمي شامل ومفيد يساعدك على التفوق في دراستك وتطوير مهاراتك
              ماذا نقدم؟
 
-            • ملخصات و شروحات واضحة وسهلة للمناهج.
-            • اختبارات تجريبية لتحسين مستواك.
-            • نصائح دراسية تساعدك على تنظيم وقتك.
-            • أحدث  وأفضل المصادر للطلاب.
+             ملخصات و شروحات واضحة وسهلة للمناهج.
+            اختبارات تجريبية لتحسين مستواك.
+            نصائح دراسية تساعدك على تنظيم وقتك.
+             أحدث  وأفضل المصادر للطلاب.
             <br></br> 
-            انضم إلينا الآن وتفوّق في دراستك!
+            انضم إلينا الآن وتفوّق في دراستك من خلال الضغط على صور القنوات
             
            </p>
         <div>
