--- a/index.html
+++ b/index.html
@@ -236,6 +236,69 @@ content="width=device-width, initial-scale=1.0">
 
 
 
+
+
+
+
+
+
+
+        <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>أزرار برابط</title>
+    <style>
+        /* تنسيق الحاوية */
+        .button-container {
+            display: flex;
+            justify-content: center; /* لتوسيط الأزرار */
+            gap: 20px; /* مسافة بين الأزرار */
+            margin-top: 30px;
+        }
+
+        /* تنسيق الأزرار */
+        .button {
+            padding: 12px 30px; /* توسيع الأزرار */
+            font-size: 17px;
+            font-weight: bold;
+            color: #fff;
+            background-color: #a0a0a0; /* لون رصاصي */
+            border: none;
+            border-radius: 8px; /* زوايا دائرية */
+            text-decoration: none; /* إزالة التسطير من الرابط */
+            cursor: pointer;
+            transition: all 0.2s;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* ظل خفيف */
+        }
+
+        /* تأثير التمرير */
+        .button:hover {
+            background-color: #d4af37; /* لون ذهبي عند التمرير */
+        }
+
+        /* تأثير عند الضغط */
+        .button:active {
+            transform: translateY(3px); /* تحريك الزر للأسفل */
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* تقليل الظل */
+        }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         <title>قائمة بأزرار منسدلة</title>
     <style>
         /* تنسيق القائمة الرئيسية */
@@ -439,9 +502,23 @@ content="width=device-width, initial-scale=1.0">
            
         </div>
         <br></br> 
-        <div class="menu-container">
-            <a href="https://t.me/d_tt111" class="custom-button" target="_blank">كروب طلاب سادس  الإعدادي</a>
-        </div><br></br> 
+        <body>
+
+            <div class="button-container">
+                <a href="https://t.me/hasan99bot" class="button">  السادس الاعدادي</a>
+                <a href="https://t.me/hasan99bot?start=895131a1a04d8ac5228807797633494c" class="button"> الثالث المتوسط</a>
+                <a href="https://t.me/hasan99bot?start=2c3c1350fa7dd68e8dda353ddb8e1133" class="button"> السادس ابتدائي  </a>
+            </div>
+            <br></br>  
+            <div class="button-container">
+                <a href="https://t.me/hasan99bot?start=4dc2d50c11bee58302fcd9a7e1c52da1" class="button"> محاضرات المسربة</a>
+                <a href="https://t.me/hasan99bot?start=d99b8a5acba9f088d014cf22c5f561c4" class="button">بصمات نصائح</a>
+                <a href="https://t.me/hasan99bot?start=776e4250ff1a42ec566780148103d798" class="button">التحفيـــز</a>
+            </div>
+        
+        </body>
+        </html>
+      <br></br> 
         <!-- الأزرار الإضافية -->
         <a href="https://t.me/d_tt123bot?start=4e9a1ee436415e035dda990a0b039963" class="custom-button" target="_blank">ملازم اللغة العربية السادس إعدادي 2025</a>
         <a href="https://t.me/d_tt123bot?start=eed6022419bf38db21fc4cc4ffe6cba2" class="custom-button" target="_blank">ملازم الإسلامية السادس إعدادي 2025</a>
@@ -450,17 +527,17 @@ content="width=device-width, initial-scale=1.0">
         <a href="https://t.me/d_tt123bot?start=11dbcc75f900e4ab5079be0a5e95fb7a" class="custom-button" target="_blank">ملازم الفيزياء السادس إعدادي 2025</a>
         <a href="https://t.me/d_tt123bot?start=eea4b408a8a47f3a07fd07b24c2e43d1" class="custom-button" target="_blank">ملازم الرياضيات السادس إعدادي 2025</a>
     </div>
+    <div class="button-container">
+        <a href="https://t.me/hasan99bot?start=2dcf16ce1f855979dc9b253b23af0ce5" class="button"> اسرار الوزاري</a>
+        <a href="https://t.me/hasan99bot?start=161a856b01931dfc38c8cc7fc2b36d49" class="button"> الامتحانات الاكترونية</a>
+
+    </div>
+    <br></br> 
+    <a href="https://t.me/hasan99bot?start=ec5004880d27aad074cfae79e76ef560" class="custom-button" target="_blank">المادة منين اقرأ الها وزاري</a>
     <h1>  </h1>
     <!-- زر الرئيسي السادس الاعدادي -->
-    <div class="menu-container">
-        <a href="" class="custom-button" target="_blank">السادس الإعدادي</a>
-        <div class="dropdown-content">
-            <a href="https://t.me/d_tt02">ملازم ومرشحات</a>
-            <a href="https://t.me/Hsu58bot">اعتراضات السادس الإعدادي</a>
-            <a href="https://t.me/hasan99bot?start=161a856b01931dfc38c8cc7fc2b36d49">الامتحانات الإلكترونية</a>
-        </div>
-    </div>
-    <br></br>   <br></br>   <br></br>  
+    <br></br> 
+   
    
 <!-- قسم الكتب -->
 <h2>ملازم السادس الإعدادي 2025</h2>
