--- a/index.html
+++ b/index.html
@@ -507,12 +507,16 @@ content="width=device-width, initial-scale=1.0">
             <div class="button-container">
                 <a href="https://t.me/hasan99bot" class="button">  السادس الاعدادي</a>
                 <a href="https://t.me/hasan99bot?start=895131a1a04d8ac5228807797633494c" class="button"> الثالث المتوسط</a>
+        
+            </div>
+            <br></br>  
+            <div class="button-container">
                 <a href="https://t.me/hasan99bot?start=2c3c1350fa7dd68e8dda353ddb8e1133" class="button"> السادس ابتدائي  </a>
+                <a href="https://t.me/hasan99bot?start=d99b8a5acba9f088d014cf22c5f561c4" class="button">بصمات نصائح</a>
             </div>
             <br></br>  
             <div class="button-container">
                 <a href="https://t.me/hasan99bot?start=4dc2d50c11bee58302fcd9a7e1c52da1" class="button"> محاضرات المسربة</a>
-                <a href="https://t.me/hasan99bot?start=d99b8a5acba9f088d014cf22c5f561c4" class="button">بصمات نصائح</a>
                 <a href="https://t.me/hasan99bot?start=776e4250ff1a42ec566780148103d798" class="button">التحفيـــز</a>
             </div>
         
