--- a/index.html
+++ b/index.html
@@ -524,14 +524,12 @@ content="width=device-width, initial-scale=1.0">
 
 
       <br></br> 
-        <!-- الأزرار الإضافية -->
-        <a href="https://t.me/d_tt123bot?start=4e9a1ee436415e035dda990a0b039963" class="custom-button" target="_blank">ملازم اللغة العربية السادس إعدادي 2025</a>
-        <a href="https://t.me/d_tt123bot?start=eed6022419bf38db21fc4cc4ffe6cba2" class="custom-button" target="_blank">ملازم الإسلامية السادس إعدادي 2025</a>
-        <a href="https://t.me/d_tt123bot?start=c9713621d06f81fcf5552c5cbb4413a7" class="custom-button" target="_blank">ملازم الكيمياء السادس إعدادي 2025</a>
-        <a href="https://t.me/d_tt123bot?start=11dbcc75f900e4ab5079be0a5e95fb7a" class="custom-button" target="_blank">ملازم الفيزياء السادس إعدادي 2025</a>
-        <a href="https://t.me/d_tt123bot?start=11dbcc75f900e4ab5079be0a5e95fb7a" class="custom-button" target="_blank">ملازم الفيزياء السادس إعدادي 2025</a>
-        <a href="https://t.me/d_tt123bot?start=eea4b408a8a47f3a07fd07b24c2e43d1" class="custom-button" target="_blank">ملازم الرياضيات السادس إعدادي 2025</a>
-    </div>
+      <a href="https://t.me/hasan99bot?start=ec5004880d27aad074cfae79e76ef560" class="custom-button" target="_blank">المادة منين اقرأ الها وزاري</a>
+    <h1>  </h1>
+    <!-- زر الرئيسي السادس الاعدادي -->
+    <br></br> 
+   
+        
     <div class="button-container">
         <a href="https://t.me/hasan99bot?start=2dcf16ce1f855979dc9b253b23af0ce5" class="button"> اسرار الوزاري</a>
         <a href="https://t.me/hasan99bot?start=161a856b01931dfc38c8cc7fc2b36d49" class="button"> الامتحانات الاكترونية</a>
@@ -544,7 +542,7 @@ content="width=device-width, initial-scale=1.0">
     </div>
 
     <br></br> 
-    <a href="https://t.me/hasan99bot?start=ec5004880d27aad074cfae79e76ef560" class="custom-button" target="_blank">المادة منين اقرأ الها وزاري</a>
+   
     <h1>  </h1>
     <!-- زر الرئيسي السادس الاعدادي -->
     <br></br> 
@@ -553,6 +551,16 @@ content="width=device-width, initial-scale=1.0">
 <!-- قسم الكتب -->
 <h2>ملازم السادس الإعدادي 2025</h2>
 تستعد العديد من الطلاب في العراق لمواجهة تحديات الصف السادس العلمي، والتي تتطلب إعدادًا جيدًا ومصادر موثوقة. ولمساعدتكم في هذا الصدد، نقدم لكم صفحة تحميل ملازم الصف السادس العلمي للعام الدراسي 2025. تتوفر في هذه الصفحة ملازم لجميع المواد المقررة، بما في ذلك الاسلامية، القواعد، الأدب، الرياضيات، الفيزياء، الكيمياء، الأحياء، اللغة الإنجليزية، اللغة العربية، واللغة الفرنسية.
+ <!-- الأزرار الإضافية -->
+ <a href="https://t.me/d_tt123bot?start=4e9a1ee436415e035dda990a0b039963" class="custom-button" target="_blank">ملازم اللغة العربية السادس إعدادي 2025</a>
+ <a href="https://t.me/d_tt123bot?start=eed6022419bf38db21fc4cc4ffe6cba2" class="custom-button" target="_blank">ملازم الإسلامية السادس إعدادي 2025</a>
+ <a href="https://t.me/d_tt123bot?start=c9713621d06f81fcf5552c5cbb4413a7" class="custom-button" target="_blank">ملازم الكيمياء السادس إعدادي 2025</a>
+ <a href="https://t.me/d_tt123bot?start=11dbcc75f900e4ab5079be0a5e95fb7a" class="custom-button" target="_blank">ملازم الفيزياء السادس إعدادي 2025</a>
+ <a href="https://t.me/d_tt123bot?start=11dbcc75f900e4ab5079be0a5e95fb7a" class="custom-button" target="_blank">ملازم الفيزياء السادس إعدادي 2025</a>
+ <a href="https://t.me/d_tt123bot?start=eea4b408a8a47f3a07fd07b24c2e43d1" class="custom-button" target="_blank">ملازم الرياضيات السادس إعدادي 2025</a>
+</div>
+
+
 <div class="books-container">
     <!-- كتاب 1 -->
     <div class="book-item">
