--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ content="width=device-width, initial-scale=1.0">
         </div>
         <br></br>  <br></br> 
         <div class="button-container">
-            <a href="https://github.com/lraq2/-_-/w.html" class="button"> نتائج السادس الإعدادي الدور الثالث - العراق </a>
+            <a href="/w.html" class="button"> نتائج السادس الإعدادي الدور الثالث - العراق </a>
     
     
         </div>
