--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ content="width=device-width, initial-scale=1.0">
 
 
       <br></br> 
-      <a href="https://t.me/hasan99bot?start=ec5004880d27aad074cfae79e76ef560" class="custom-button" target="_blank">المادة منين اقرأ الها وزاري</a>
+      <a href="https://t.me/hasan99bot?start=12c49202a489febd562cdc9ba0ab917b" class="custom-button" target="_blank">  حصرة الجلب 🫣 </a>
     <h1>  </h1>
     <!-- زر الرئيسي السادس الاعدادي -->
     <br></br> 
@@ -462,8 +462,8 @@ content="width=device-width, initial-scale=1.0">
 
     </div><br></br> <br></br> 
     <div class="button-container">
-        <a href="https://t.me/hasan99bot?start=2dcf16ce1f855979dc9b253b23af0ce5" class="button"> اسرار الوزاري</a>
-        <a href="https://t.me/hasan99bot?start=161a856b01931dfc38c8cc7fc2b36d49" class="button"> الامتحانات الاكترونية</a>
+        <a href="https://t.me/hasan99bot?start=2418adcb6259ee49103d0ea6c41be749" class="button"> خطه لوصلتني للطب 🥼 </a>
+        <a href="https://t.me/hasan99bot?start=6ea145156b2f003fa9f4333b9194af25" class="button"> اذا ابدي هسه من الصفر الحك لو لا؟؟</a>
 
     </div>
     <br></br>  
@@ -570,5 +570,6 @@ content="width=device-width, initial-scale=1.0">
     </script>
 </body>
 </html>
+
 
 
