--- a/index.html
+++ b/index.html
@@ -453,24 +453,27 @@ content="width=device-width, initial-scale=1.0">
     <div class="button-container">
         <a href="https://t.me/hasan99bot?start=137edb71f9f4724290bd333b2306378c" class="button"> طريقةالفيزياء </a>
         <a href="https://t.me/hasan99bot?start=853a13a64c0acad94bbb480e3ae28e6b" class="button"> أنسى اللي قريته</a>
-        <br></br>  <a href="https://t.me/hasan99bot?start=45b4efc89fd35d60b3826d8d587d5922" class="button">   حفظ القصائد </a><br></br> 
-    </div><br></br> <br></br> 
-    <div class="button-container">
-        <a href="https://t.me/hasan99bot?start=16361792b833b1461fa588e522f5b00d" class="button"> شلون نكَدر نُدرس لمدة سَاعات طويلة بدون مُلل؟ </a>
-        <br></br> <br></br> 
-        <a href="https://t.me/hasan99bot?start=b0de64cc3813b6d9ce6f8cc4aed39ba9" class="button"> اختبار نصف السنة</a>
+        <br></br>  
+    </div>
+    <br></br> 
+    <a href="https://t.me/hasan99bot?start=16361792b833b1461fa588e522f5b00d" class="custom-button" target="_blank">  شلون نكَدر نُدرس لمدة سَاعات طويلة بدون مُلل </a>
 
-    </div><br></br> <br></br> 
+    <div class="button-container">
+      
+        <br></br> 
+        <a href="https://t.me/hasan99bot?start=b0de64cc3813b6d9ce6f8cc4aed39ba9" class="button"> اختبار نصف السنة</a>
+        <a href="https://t.me/hasan99bot?start=45b4efc89fd35d60b3826d8d587d5922" class="button">   حفظ القصائد </a>
+    </div><br></br> 
     <div class="button-container">
         <a href="https://t.me/hasan99bot?start=2418adcb6259ee49103d0ea6c41be749" class="button"> خطه لوصلتني للطب 🥼 </a>
-        <a href="https://t.me/hasan99bot?start=6ea145156b2f003fa9f4333b9194af25" class="button"> اذا ابدي هسه من الصفر الحك لو لا؟؟</a>
-
-    </div>
+        <a href="https://t.me/hasan99bot?start=776e4250ff1a42ec566780148103d798" class="button"> التحفيـــز </a>
+    </div><br></br> 
+    <a href="https://t.me/hasan99bot?start=6ea145156b2f003fa9f4333b9194af25" class="custom-button" target="_blank"> اذا ابدي هسه من الصفر الحك لو لا؟؟</a>
     <br></br>  
     <div class="button-container">
         <a href="https://t.me/hasan99bot?start=c18f4fef8f54c1b5cbc7c8d08b513e8d" class="button">  دِراسَة لـ 14 سَاعَة ✨</a>
-        <a href="https://t.me/hasan99bot?start=776e4250ff1a42ec566780148103d798" class="button">التحفيـــز</a>
-        <br></br>   <a href="https://t.me/hasan99bot?start=eJyrqan5MH/SWoUb629sBOItN1YCAGrsDAc=" class="button"> دردشة</a><br></br> 
+        <a href="https://t.me/hasan99bot?start=eJyrqan5MH/SWoUb629sBOItN1YCAGrsDAc=" class="button">دردشة</a>
+    
     </div>
 
     <br></br> 
