--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@ content="width=device-width, initial-scale=1.0">
         .menu-buttons {
             display: flex;
             flex-wrap: wrap;
-            gap: 15px;
+            gap: 10px;
             justify-content: center;
         }
 
@@ -438,7 +438,9 @@ content="width=device-width, initial-scale=1.0">
             flex-basis: 100%; /* زر مستقل لكل صف */
             text-align: center;
         }
-
+        .menu-button {
+    margin: 5px; /* تقليل المسافة حول كل زر */
+}
 
     </style>
 </head>
