--- a/index.html
+++ b/index.html
@@ -442,6 +442,132 @@ content="width=device-width, initial-scale=1.0">
     margin: 5px; /* تقليل المسافة حول كل زر */
 }
 
+
+/* تنسيق الجسم */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+/* القائمة الرئيسية */
+.main-menu {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+}
+
+.menu-toggle {
+    font-size: 18px;
+    background-color: #d4af37;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+/* الشريط الجانبي */
+.sidebar {
+    position: fixed;
+    top: 0;
+    right: -300px;
+    width: 250px;
+    height: 100%;
+    background-color: #333;
+    color: white;
+    padding: 20px;
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
+    transition: right 0.3s ease;
+}
+
+.sidebar h3 {
+    margin-top: 0;
+}
+
+.sidebar .close-btn {
+    background-color: red;
+    color: white;
+    font-size: 20px;
+    border: none;
+    border-radius: 50%;
+    padding: 5px 10px;
+    cursor: pointer;
+    float: right;
+}
+
+.menu-options {
+    list-style: none;
+    padding: 0;
+}
+
+.menu-options li {
+    margin: 15px 0;
+}
+
+.menu-options a {
+    text-decoration: none;
+    color: #d4af37;
+    font-size: 18px;
+    transition: color 0.3s;
+}
+
+.menu-options a:hover {
+    color: #fff;
+}
+
+/* الأزرار الصغيرة */
+.small-buttons {
+    position: fixed;
+    top: 100px;
+    right: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.small-btn {
+    background-color: #d4af37;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 8px 12px;
+    cursor: pointer;
+    font-size: 14px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.small-btn:hover {
+    background-color: #b68b2b;
+}
+
+.slider-container {
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+    position: relative;
+    margin: 20px 0;
+}
+
+.slider {
+    display: flex;
+    width: 300%;
+    animation: slide 10s infinite;
+}
+
+.slide {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+}
+
+@keyframes slide {
+    0% { transform: translateX(0); }
+    33% { transform: translateX(-100%); }
+    66% { transform: translateX(-200%); }
+    100% { transform: translateX(0); }
+}
     </style>
 </head>
 
@@ -468,8 +594,7 @@ content="width=device-width, initial-scale=1.0">
         </div>
    
 
-
-
+       
     <div class="section" id="d1">
         <div>
             <a href="https://t.me/d_tt3" target="_blank">
@@ -530,6 +655,13 @@ content="width=device-width, initial-scale=1.0">
  <a href="https://t.me/d_tt123bot?start=11dbcc75f900e4ab5079be0a5e95fb7a" class="custom-button" target="_blank">ملازم الفيزياء السادس إعدادي 2025</a>
  <a href="https://t.me/d_tt123bot?start=11dbcc75f900e4ab5079be0a5e95fb7a" class="custom-button" target="_blank">ملازم الفيزياء السادس إعدادي 2025</a>
  <a href="https://t.me/d_tt123bot?start=eea4b408a8a47f3a07fd07b24c2e43d1" class="custom-button" target="_blank">ملازم الرياضيات السادس إعدادي 2025</a>
+</div>
+<div class="slider-container">
+    <div class="slider">
+        <div class="slide" style="background-image: url('img/4.jpg');"></div>
+        <div class="slide" style="background-image: url('img/5.jpg');"></div>
+        <div class="slide" style="background-image: url('img/6.jpg');"></div>
+    </div>
 </div>
 
 
