--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ content="width=device-width, initial-scale=1.0">
             padding: 12px;
             background: linear-gradient(45deg, #8b7272, #44160a);
             color: white;
-            font-size: 16px;
+            font-size: 15px;
             font-weight: bold;
             text-align: center;
             text-decoration: none;
@@ -220,7 +220,7 @@ content="width=device-width, initial-scale=1.0">
             font-size: 19px;
             font-weight: bold;
             color: #fff;
-            background-color: #a0a0a0; /* لون رصاصي */
+            background-color: #af7373; /* لون رصاصي */
             border: none;
             border-radius: 8px; /* زوايا دائرية */
             text-decoration: none; /* إزالة التسطير من الرابط */
@@ -255,7 +255,7 @@ content="width=device-width, initial-scale=1.0">
             background-color: #333833;
             color: white;
             padding: 12px 20px;
-            font-size: 16px;
+            font-size: 10px;
             border: none;
             cursor: pointer;
         }
@@ -329,7 +329,7 @@ content="width=device-width, initial-scale=1.0">
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            font-size: 14px;
+            font-size: 5px;
             transition: background-color 0.3s;
         }
 
@@ -351,7 +351,7 @@ content="width=device-width, initial-scale=1.0">
 
     .button, .custom-button {
         width: 100%;
-        font-size: 16px;
+        font-size: 18px;
         padding: 12px;
     }
 
@@ -417,7 +417,7 @@ content="width=device-width, initial-scale=1.0">
             background-color: #777777; /* اللون الذهبي */
             color: white;
             padding: 12px 20px;
-            font-size: 18px;
+            font-size: 14px;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease, background-color 0.3s ease;
@@ -517,10 +517,10 @@ body {
 .small-buttons {
     position: fixed;
     top: 100px;
-    right: 10px;
+    right: 15px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 16px;
 }
 </style>
 </head>
