--- a/index.html
+++ b/index.html
@@ -62,7 +62,13 @@ content="width=device-width, initial-scale=1.0">
 
 
 
-
+        button {
+    font-size: 10px;
+    padding: 15px 15px;
+    border-radius: 10px;
+    width: auto; /* تكبير العرض تلقائيًا */
+    height: auto; /* تكبير الطول تلقائيًا */
+}
 
 
     /* تنسيق الزر */
