--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ content="width=device-width, initial-scale=1.0">
             padding: 0;
         }
         .menu-button {
-            background-color: #007bff;
+            background-color: #000000;
             color: white;
             padding: 10px 20px;
             border: none;
@@ -27,7 +27,7 @@ content="width=device-width, initial-scale=1.0">
             margin: 20px;
         }
         .menu-button:hover {
-            background-color: #0056b3;
+            background-color: #000000;
         }
         .submenu {
             display: none;
@@ -198,7 +198,7 @@ content="width=device-width, initial-scale=1.0">
 
         .search-button {
             padding: 10px 20px;
-            background-color: #007bff;
+            background-color: #000000;
             color: white;
             border: none;
             border-radius: 5px;
@@ -206,7 +206,7 @@ content="width=device-width, initial-scale=1.0">
         }
 
         .search-button:hover {
-            background-color: #0056b3;
+            background-color: #000000;
         }
 
 
